--- a/esjadmin-web/src/styles/index.scss
+++ b/esjadmin-web/src/styles/index.scss
@@ -130,7 +130,8 @@ aside {
 }
 
 .pagination-container {
-  margin-top: 30px;
+  // margin-top: 30px;
+  margin-top: 10px;
 }
 
 .text-center {
@@ -172,12 +173,14 @@ aside {
 }
 
 .filter-container {
-  padding-bottom: 10px;
+  // padding-bottom: 10px;
+  margin-bottom: 10px;
 
   .filter-item {
     display: inline-block;
     vertical-align: middle;
-    margin-bottom: 10px;
+    // margin-bottom: 10px;
+    margin-right: 8px;
   }
 }
 
