优化代码生成时间段选择，QueryHelp模糊查询

--- a/esjadmin-web/src/styles/index.scss
+++ b/esjadmin-web/src/styles/index.scss
@@ -200,11 +200,14 @@ aside {
     line-height: 30.5px;
   }
   .date-item {
-    display: inline-block;
-    vertical-align: middle;
-    margin-bottom: 10px;
-    height: 30.5px !important;
+    //display: inline-block;
+    //vertical-align: middle;
+    //margin-bottom: 10px;
+    //height: 30.5px !important;
     width: 230px !important;
+  }
+  .datetime-item {
+    width: 356px !important;
   }
 }
 
