--- a/esjadmin-web/src/styles/index.scss
+++ b/esjadmin-web/src/styles/index.scss
@@ -121,7 +121,7 @@ aside {
 
 //main-container全局样式
 .app-container {
-  padding: 20px;
+  padding: 20px 20px 40px 20px;
 }
 
 .components-container {
